chore: Updated responsiveness for destination pages. fix: Fixed footer and header responsiveness alignment

--- a/styles/destinations.scss
+++ b/styles/destinations.scss
@@ -16,6 +16,13 @@
     max-width: 80rem;
     margin: 0 auto;
 
+    @include tablet {
+        justify-content: center;
+        align-items: center;
+        padding: 4rem 1rem;
+        height: 100%;
+    }
+
         &--hawaii {
             background-image: url(../assets/images/hawaii.jpg);
         }
@@ -39,6 +46,12 @@
             justify-content: center;
             gap: 3rem;
             width: 100%;
+
+            @include tablet {
+                flex-direction: column;                
+                max-width: 16rem;
+                align-items: center;
+            }
         }
         
         &__card {
@@ -46,10 +59,17 @@
             flex-direction: column;
             gap: 1rem;
             width: 23%;
+            min-width: 12rem;
+            max-width: 15.1797rem;
             height: 22.5rem;
             border-radius: 0.625rem;
             background-color: $colour-white;
             padding: 1rem;
+
+            @include tablet {
+                width: 60%;
+                max-width: 16rem;
+            }
         }
 
         &__day {
