--- a/styles/main.css
+++ b/styles/main.css
@@ -119,25 +119,15 @@ p {
   font-weight: 400;
 }
 
-header {
-  max-width: 80rem;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  header {
-    width: 100%;
-  }
-}
-
 .nav {
   padding: 1rem 7rem;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  position: fixed;
   background-color: #FFFFFF;
-  max-width: 80rem;
+  max-width: 100%;
   z-index: 1;
+  margin: 0 auto;
 }
 @media (max-width: 768px) {
   .nav {
@@ -182,14 +172,22 @@ header {
   max-width: 80rem;
   margin: 0 auto;
 }
+@media (max-width: 1142px) {
+  .footer {
+    align-items: baseline;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding: 4rem 10rem;
+  }
+}
 @media (max-width: 768px) {
   .footer {
     flex-direction: column;
     gap: 2rem;
-    height: 54vh;
     justify-content: space-around;
     text-align: center;
-    padding: 1rem 5rem;
+    padding: 4rem 5rem;
+    align-items: center;
   }
 }
 .footer__title {
@@ -207,7 +205,7 @@ header {
   display: flex;
   gap: 2rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 1142px) {
   .footer__hours {
     flex-direction: column;
     gap: 1rem;
