--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -6,3 +6,9 @@
       @content;
     }
   }
+
+  @mixin footer-hours {
+    @media (max-width: 1142px) {
+      @content;
+    }
+  }
